--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ svg {
 }
 .option:not(:last-child) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  border-top: 1px solid rgba(0, 0, 0, 0.3);
+  /* border-top: 1px solid rgba(0, 0, 0, 0.3); */
 }
 .main-container--name {
   color: rgba(0, 0, 0, 0.5);
