--- a/style.css
+++ b/style.css
@@ -87,6 +87,11 @@ button {
 }
 
 /*main styles*/
+#main {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
 .main-text {
   display: inline-block;
   margin: 35vh auto 0px;
@@ -96,6 +101,84 @@ button {
   line-height: 18px;
   opacity: 0.3;
 }
+.main-container {
+  max-width: 1160px;
+  width: 100%;
+  box-shadow: 0px 4px 20px rgb(0 0 0 / 20%);
+  border-radius: 6px;
+  padding: 0px 24px;
+  box-sizing: border-box;
+}
+.main-dropdown_button {
+  position: relative;
+  width: 100%;
+  height: 70px;
+  text-align: left;
+  border: none;
+  background: #fff;
+  font-size: 18px;
+  line-height: 22px;
+  color: #000000;
+}
+.main-container.active .main-dropdown_button {
+  color: #005bfe;
+}
+.main-container .chevron-icon {
+  position: absolute;
+  left: calc(100% - 10px);
+  top: 50%;
+  transform: translate(-100%, -50%) rotate(180deg);
+  transition: all 0.5s ease;
+}
+.main-container.active .chevron-icon {
+  transform: translate(-100%, -50%);
+}
+.item-icon--blue:hover svg {
+  background: #005bfe;
+  border-radius: 6px;
+}
+.main-option-container {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  padding: 0px;
+  gap: 24px;
+  overflow: hidden;
+  text-align: center;
+  transition: all 0.5s ease;
+}
+
+.option {
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 24px;
+  transition: all 0.1s ease-in-out;
+}
+.option:hover {
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 6px 6px 0px 0px;
+}
+.option:not(:last-child) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.main-container--name {
+  color: rgba(0, 0, 0, 0.5);
+}
+.main-container--number {
+  margin-left: auto;
+  font-size: 18px;
+}
+.main-container--buttons {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+/* общие стили модалки */
 .offcanvas.offcanvas-start {
   max-width: 100%;
   width: 312px;
@@ -211,7 +294,7 @@ svg {
   background: #0047c6;
 }
 
-/*styles for contact modal*/
+/*стили для модалки контакта*/
 
 .form {
   display: flex;
@@ -225,88 +308,6 @@ svg {
   cursor: pointer;
 }
 
-/* вариант с непустым списком */
-#main {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-.main-container {
-  max-width: 1160px;
-  width: 100%;
-  box-shadow: 0px 4px 20px rgb(0 0 0 / 20%);
-  border-radius: 6px;
-  padding: 0px 24px;
-  box-sizing: border-box;
-}
-.main-dropdown_button {
-  position: relative;
-  width: 100%;
-  height: 70px;
-  text-align: left;
-  border: none;
-  background: #fff;
-  font-size: 18px;
-  line-height: 22px;
-  color: #000000;
-}
-.main-container.active .main-dropdown_button {
-  color: #005bfe;
-}
-.main-container .chevron-icon {
-  position: absolute;
-  left: calc(100% - 10px);
-  top: 50%;
-  transform: translate(-100%, -50%) rotate(180deg);
-  transition: all 0.5s ease;
-}
-.main-container.active .chevron-icon {
-  transform: translate(-100%, -50%);
-}
-.item-icon--blue:hover svg {
-  background: #005bfe;
-  border-radius: 6px;
-}
-.main-option-container {
-  display: flex;
-  flex-direction: column;
-  list-style-type: none;
-  padding: 0px;
-  gap: 24px;
-  overflow: hidden;
-  text-align: center;
-  transition: all 0.5s ease;
-}
-
-.option {
-  height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 24px;
-  transition: all 0.1s ease-in-out;
-}
-.option:hover {
-  background: rgba(0, 0, 0, 0.05);
-  border-radius: 6px 6px 0px 0px;
-}
-.option:not(:last-child) {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-}
-
-.main-container--name {
-  color: rgba(0, 0, 0, 0.5);
-}
-.main-container--number {
-  margin-left: auto;
-  font-size: 18px;
-}
-.main-container--buttons {
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
 .hidden {
   display: none;
 }
@@ -319,9 +320,6 @@ svg {
     padding-left: 10px;
     padding-right: 10px;
   }
-}
-
-@media screen and (max-width: 700px) {
 }
 
 @media screen and (max-width: 500px) {
